# Deriverse-Trading-System-Analysis

./: .env  LICENSE
deriverse-data-puller/: .env  .env.example  .gitignore  Makefile  README.md  analysis.ts  analyze_deriverse.ts  diverse_client.ts  engine.ts  enhanced_analysis.ts  export_to_csv.ts  fetch_trader_account.ts  full_code_review.txt  main.py  open_positions.ts  package-lock.json  package.json  persist_data.ts  pyproject.toml  run.py  summary.ts  temp.txt  test.ts  trade_fill_hisory.ts  tsconfig.json
deriverse-data-puller/.Archive_TS/: analysis.ts  package-lock.json
deriverse-data-puller/Archive_TS/: fetch_deriverse_transactions.ts
deriverse-data-puller/Archive_TS/analysis_output/: analysis_2026-02-04T09-23-23-159Z.json
deriverse-data-puller/analysis_output/: analysis_2026-02-03T18-36-31-282Z.json
deriverse-data-puller/configs/: analytics.yaml  ingestion.yaml  loader.py  mock_data.json  mock_data.yaml
deriverse-data-puller/dashboards/: app.py  app1.py  app_test.py
deriverse-data-puller/dashboards/.streamlit/: config.toml
deriverse-data-puller/data/: raw_events.json
deriverse-data-puller/data/analytics/: positions.csv  realized_pnl.csv
deriverse-data-puller/data/analytics_output/: directional_bias.csv  equity_curve.csv  fees_breakdown.csv  greeks_exposure.csv  open_positions.csv  order_type_performance.csv  pnl_by_day.csv  pnl_by_hour.csv  positions.csv  (+3 more)
deriverse-data-puller/scripts/: build_trades_table.py  diagnose_data.py  generate_mock_data.py  launch_dashboard.py  run_analytics.py  run_ingestion.py  validate_analytics.py
(+59 files in other folders)
